# learn-langgraph

./: .example.env  pyproject.toml
1-sequential-workflow/: 1-bmi-calculator.ipynb  2-llm-workflow.ipynb  3-prompt-chaining-workflow.ipynb
10-chatbot-rag/: 1-rag.ipynb  chatbot_rag_backend.py
11-hitl/: 1-hitl.ipynb  2-without-hitl.py  3-with-hitl.py
12-subgraphs/: 1-subgraph-separate-state.ipynb  2-subgraph-shared-state.ipynb
2-parallel-workflow/: 1-simple-parallel.ipynb  2-complex-parallel.ipynb
3-conditional-workflow/: 1-quadratic-equation-workflow.ipynb  2-llm-based-review.ipynb
4-iterative-workflow/: 1-evaluate-post.ipynb
5-persistence/: 1-persistence-joke..ipynb  2-fault-tolerance.ipynb
6-chatbot/: 1-checkpointer-maintained-chatbot.py
7-inmemory-chatbot/: chatbot_ui_streamlit_backend.py  chatbot_ui_streamlit_frontend_streaming.py  chatbot_ui_streamlit_frontend_threading.py  chatbot_ui_streamlit_frotnend.py
8-database-chatbot/: chatbot_conversations.db  chatbot_conversations.db-shm  chatbot_conversations.db-wal  chatbot_database_backend.py  chatbot_database_frontend.py
9-mcp-client-database-chatbot/: 1-mcp_server.py  2-chatbot_mcp.py  chatbot.db-shm  chatbot.db-wal  chatbot_mcp_backend.py  chatbot_mcp_frontend.py
